--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -21,5 +21,5 @@
 
 <section class="charts-section" nz-row nzGutter="12">
     <app-access-geo nz-col nzSpan="8"></app-access-geo>
-<!--    <app-error-statist></app-error-statist>-->
+    <app-error-statist  nz-col nzSpan="16"></app-error-statist>
 </section>
