--- a/src/app/pages/dashboard/error-statist/error-statist.component.css
+++ b/src/app/pages/dashboard/error-statist/error-statist.component.css
@@ -1,8 +1,3 @@
-.error-table{
-    min-width: 100%;
-}
-
-.error-interval{
-    margin-left: 24px;
-    width: 96px;
+nz-select{
+  margin-right: 12px;
 }
