--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <li nz-submenu nzOpen nzTitle="Dota" nzIcon="wechat">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Version</a>
+            <a  routerLink="/dota/version">Version</a>
           </li>
         </ul>
       </li>
