--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       </div>
     </nz-header>
     <div class="app-content-footer">
-      <nz-content>
+      <nz-content class="app-content">
         <nz-breadcrumb [nzAutoGenerate]="true"></nz-breadcrumb>
         <div class="inner-content">
           <router-outlet></router-outlet>
