--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@
   position: relative;
   z-index: 10;
   min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
+  box-shadow: 2px 0 6px rgba(0, 21, 41, .35);
 }
 
 .header-trigger {
@@ -21,7 +21,7 @@
   padding: 20px 24px;
   font-size: 20px;
   cursor: pointer;
-  transition: all .3s,padding 0s;
+  transition: all .3s, padding 0s;
 }
 
 .trigger:hover {
@@ -51,7 +51,7 @@
   color: #fff;
   font-weight: 600;
   font-size: 14px;
-  font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
+  font-family: Avenir, Helvetica Neue, Arial, Helvetica, sans-serif;
   vertical-align: middle;
 }
 
@@ -66,13 +66,19 @@ nz-header {
   height: 64px;
   padding: 0;
   background: #fff;
-  box-shadow: 0 1px 4px rgba(0,21,41,.08);
+  box-shadow: 0 1px 4px rgba(0, 21, 41, .08);
 }
 
-nz-content {
+.app-content-footer {
+  overflow-y: scroll;
+  height: 100%;
+}
+
+.app-content {
   margin: 24px;
   display: flex;
   flex-direction: column;
+  min-height: calc(100% - 128px);
 }
 
 nz-footer {
@@ -85,6 +91,4 @@ nz-footer {
   flex: 1;
 }
 
-.app-content-footer{
-  overflow-y: scroll;
-}
+
