设置版本，分离cache和http

--- a/src/app/pages/dota/version/version.component.html
+++ b/src/app/pages/dota/version/version.component.html
@@ -1,9 +1,9 @@
 <nz-card>
   <nz-input-group nzAddOnBefore="版本号：" nzSearch [nzAddOnAfter]="suffixIconButton">
-    <input type="text" nz-input [(ngModel)]="version" [disabled]="!isEditing" />
+    <input type="text" nz-input [(ngModel)]="version" [disabled]="disabled" />
   </nz-input-group>
   <ng-template #suffixIconButton>
-    <button nz-button nzType="primary" nzSearch (click)="buttonClick()"><i nz-icon [nzType]="iconType"></i></button>
+    <button nz-button nzType="primary" nzSearch (click)="buttonClick()"><i nz-icon [nzType]="iconType" [nzSpin]="iconSpin"></i></button>
   </ng-template>
   <div class="text-modify-date">修改时间：{{modifyDate}}</div>
 </nz-card>
