--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
 <form nz-form class="login-form" (ngSubmit)="submitForm()" #loginForm="ngForm">
-  <h1 class="login-form-title"><img src="https://wycode.cn/img/logo_48.png" alt="logo"/>    Login</h1>
+  <h1 class="login-form-title"><img src="https://wycode.cn/img/logo_48.png" alt="logo" /> Login</h1>
   <nz-form-item>
     <nz-form-control nzErrorTip="Please input your username!" nzHasFeedback>
       <nz-input-group nzPrefixIcon="user">
@@ -14,9 +14,12 @@
       </nz-input-group>
     </nz-form-control>
   </nz-form-item>
+  <nz-alert *ngIf="error" nzType="error" [nzMessage]="error"></nz-alert>
   <nz-form-item>
     <nz-form-control>
-      <button nz-button class="login-form-button" nzType="primary" type="submit" nzSize="large" [disabled]="!loginForm.form.valid">Login</button>
+      <button nz-button class="login-form-button" nzType="primary" type="submit" nzSize="large"
+              [disabled]="!loginForm.form.valid" [nzLoading]="loading">Login
+      </button>
     </nz-form-control>
   </nz-form-item>
 </form>
