--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
   <div *ngIf="showDropdown" class="header-user-dropdown">
     <ul nz-menu class="ant-dropdown-menu">
-      <li nz-menu-item class="ant-dropdown-menu-item" (click)="logout()">Logout</li>
+      <li nz-menu-item class="ant-dropdown-menu-item" (click)="logout()">登出</li>
     </ul>
   </div>
 </div>
