--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -13,6 +13,9 @@
       <li nz-menu-item nzMatchRouter>
         <a routerLink="/dota/version">版本管理</a>
       </li>
+      <li nz-menu-item nzMatchRouter>
+        <a routerLink="/dota/heroes">英雄列表</a>
+      </li>
     </ul>
   </li>
 </ul>
