--- a/src/app/pages/dota/version/version.component.html
+++ b/src/app/pages/dota/version/version.component.html
@@ -3,7 +3,7 @@
     <input type="text" nz-input [(ngModel)]="version" [disabled]="disabled" />
   </nz-input-group>
   <ng-template #suffixIconButton>
-    <button nz-button nzType="primary" nzSearch (click)="buttonClick()"><i nz-icon [nzType]="iconType" [nzSpin]="iconSpin"></i></button>
+    <button nz-button nzType="primary" nzSearch (click)="buttonClick()"><i nz-icon [nzType]="iconType"></i></button>
   </ng-template>
   <div class="text-modify-date">修改时间：{{modifyDate}}</div>
 </nz-card>
