--- a/src/app/pages/dota/heroes/heroes.component.html
+++ b/src/app/pages/dota/heroes/heroes.component.html
@@ -1,29 +1,31 @@
 <nz-collapse>
   <nz-collapse-panel nzHeader="力量型" nzActive="true">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let hero of strengthHeroes" routerLink="{{'/dota/hero/'+hero.name}}" class="hero-link">
-        <img src="{{hero.imageUrl}}" class="hero-img" alt="{{hero.name}}" />
+      <a *ngFor="let hero of strengthHeroes" routerLink="/dota/hero" [queryParams]="hero"
+         class="hero-link">
+        <img [src]="hero.imageUrl" class="hero-img" alt="{{hero.name}}" />
         <span class="hero-name">{{hero.name}}</span>
       </a>
     </nz-spin>
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="智力型">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let hero of intelligenceHeroes" routerLink="{{'/dota/hero/'+hero.name}}" class="hero-link">
-        <img src="{{hero.imageUrl}}" class="hero-img" alt="{{hero.name}}" />
+      <a *ngFor="let hero of intelligenceHeroes" routerLink="/dota/hero" [queryParams]="hero"
+         class="hero-link">
+        <img [src]="hero.imageUrl" class="hero-img" alt="{{hero.name}}" />
         <span class="hero-name">{{hero.name}}</span>
       </a>
     </nz-spin>
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="敏捷型">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let hero of agileHeroes" routerLink="{{'/dota/hero/'+hero.name}}" class="hero-link">
-        <img src="{{hero.imageUrl}}" class="hero-img" alt="{{hero.name}}" />
+      <a *ngFor="let hero of agileHeroes" routerLink="/dota/hero" [queryParams]="hero" class="hero-link">
+        <img [src]="hero.imageUrl" class="hero-img" alt="{{hero.name}}" />
         <span class="hero-name">{{hero.name}}</span>
       </a>
     </nz-spin>
   </nz-collapse-panel>
 </nz-collapse>
-<a class="btn-add" nz-button nzType="primary" nzSize="large" routerLink="/dota/hero/new"><i nz-icon nzType="plus"></i>新增</a>
+<a class="btn-add" nz-button nzType="primary" nzSize="large" routerLink="/dota/hero"><i nz-icon nzType="plus"></i>新增</a>
 
 
