英雄详情页

--- a/src/app/pages/dota/create-hero/create-hero.component.css
+++ b/src/app/pages/dota/create-hero/create-hero.component.css
@@ -1,8 +1,6 @@
-nz-page-header{
+.white-background{
+  padding: 12px;
+  background-color: white;
   border: 1px solid rgb(235, 237, 240);
   margin-bottom: 12px;
-}
-
-nz-tabset{
-  background-color: white;
 }
