--- a/src/app/pages/dota/hero-detail/basic-info/basic-info.component.html
+++ b/src/app/pages/dota/hero-detail/basic-info/basic-info.component.html
@@ -1,8 +1,8 @@
-<form nz-form>
+<form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item>
     <nz-form-label nzRequired nzSpan="2">英雄名字</nz-form-label>
     <nz-form-control nzSpan="2">
-      <input nz-input required placeholder="英雄名字" [(ngModel)]="hero.name" name="name" />
+      <input nz-input required placeholder="英雄名字" [(ngModel)]="hero.name" name="name"/>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
@@ -21,21 +21,24 @@
       {{hero.imageUrl ? '' : '英雄图片'}}
     </nz-form-label>
     <nz-form-control nzSpan="10">
-      <input nz-input required placeholder="英雄图片" [(ngModel)]="hero.imageUrl" name="imageUrl" />
+      <input nz-input required placeholder="英雄图片" [(ngModel)]="hero.imageUrl" name="imageUrl"/>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-label nzRequired nzSpan="2">
-      <img *ngIf="hero.icon" [src]="hero.icon" />
+      <img *ngIf="hero.icon" [src]="hero.icon" width="32" />
       {{hero.imageUrl ? '' : '英雄图标'}}
     </nz-form-label>
     <nz-form-control nzSpan="10">
-      <input nz-input required placeholder="英雄图标" [(ngModel)]="hero.icon" name="icon" />
+      <input nz-input required placeholder="英雄图标" [(ngModel)]="hero.icon" name="icon"/>
     </nz-form-control>
   </nz-form-item>
+  <nz-alert *ngIf="error" nzType="error" [nzMessage]="error"></nz-alert>
   <nz-form-item>
     <nz-form-control nzOffset="2">
-      <button nz-button nzType="primary" nzSize="large"><i nz-icon nzType="upload"></i>保存</button>
+      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit"
+              [nzLoading]="loading"><i nz-icon nzType="upload"></i>保存
+      </button>
     </nz-form-control>
   </nz-form-item>
 </form>
