--- a/src/app/pages/dota/hero-detail/hero-detail.component.html
+++ b/src/app/pages/dota/hero-detail/hero-detail.component.html
@@ -1,6 +1,10 @@
 <nz-page-header (nzBack)="onBack()" nzBackIcon [nzTitle]="hero.name" [nzGhost]="false">
   <nz-page-header-extra>
-    <button nz-button nzType="danger"><i nz-icon nzType="delete"></i>删除英雄</button>
+    <button nz-button nzType="danger" nz-popconfirm nzPopconfirmTitle="确认删除 {{hero.name}} 的所有信息？"
+            nzPopconfirmPlacement="bottomRight"
+            (nzOnConfirm)="delete()"
+            [nzLoading]="loading"><i nz-icon nzType="delete"></i>删除英雄
+    </button>
   </nz-page-header-extra>
 </nz-page-header>
 
