--- a/src/app/pages/dota/hero-detail/detail-info/detail-info.component.html
+++ b/src/app/pages/dota/hero-detail/detail-info/detail-info.component.html
@@ -1,4 +1,4 @@
-<form nz-form>
+<form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item>
     <nz-form-label nzRequired nzSpan="2">其它昵称</nz-form-label>
     <nz-form-control nzSpan="5">
@@ -96,7 +96,9 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control nzOffset="2">
-      <button nz-button nzType="primary" nzSize="large"><i nz-icon nzType="upload"></i>保存</button>
+      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit"
+              [nzLoading]="loading"><i nz-icon nzType="upload"></i>保存
+      </button>
     </nz-form-control>
   </nz-form-item>
 </form>
