--- a/src/app/pages/dota/hero-detail/ability-info/ability-form/ability-form.component.html
+++ b/src/app/pages/dota/hero-detail/ability-info/ability-form/ability-form.component.html
@@ -1,4 +1,4 @@
-<form nz-form>
+<form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item>
     <nz-form-label nzRequired nzSpan="2">名称</nz-form-label>
     <nz-form-control nzSpan="2">
@@ -13,7 +13,7 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-label nzRequired nzSpan="2">
-      <img  *ngIf="ability.imageUrl" [src]="ability.imageUrl" />
+      <img *ngIf="ability.imageUrl" [src]="ability.imageUrl" />
       {{ability.imageUrl ? '' : '图标'}}
     </nz-form-label>
     <nz-form-control nzSpan="10">
@@ -47,13 +47,26 @@
   <nz-form-item>
     <nz-form-label nzSpan="2">提示</nz-form-label>
     <nz-form-control nzSpan="10">
-      <textarea rows="4" nz-input required placeholder="提示" [(ngModel)]="ability.tips" name="tips"></textarea>
+      <textarea rows="4" nz-input placeholder="提示" [(ngModel)]="ability.tips" name="tips"></textarea>
     </nz-form-control>
   </nz-form-item>
 
   <nz-form-item>
     <nz-form-control nzSpan="18" nzOffset="2">
-      <button nz-button nzType="primary" nzSize="large"><i nz-icon nzType="upload"></i>保存</button>
+      <button nz-button nzType="primary"
+              nzSize="large"
+              [disabled]="!form.form.valid"
+              type="submit"
+              [nzLoading]="loading"><i nz-icon nzType="upload"></i>保存
+      </button>
+      <button *ngIf="saved"
+              nz-button
+              nzType="danger"
+              nzSize="large"
+              type="button"
+              (click)="delete()"
+              [nzLoading]="loading"><i nz-icon nzType="delete"></i>删除
+      </button>
     </nz-form-control>
   </nz-form-item>
   <nz-divider></nz-divider>
