--- a/src/app/pages/dota/hero-detail/basic-info/basic-info.component.html
+++ b/src/app/pages/dota/hero-detail/basic-info/basic-info.component.html
@@ -1,12 +1,12 @@
 <form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item>
-    <nz-form-label nzRequired nzSpan="2">英雄名字</nz-form-label>
+    <nz-form-label nzRequired nzSpan="2">名称</nz-form-label>
     <nz-form-control nzSpan="2">
-      <input nz-input required placeholder="英雄名字" [(ngModel)]="hero.name" name="name" [disabled]="!isCreate" />
+      <input nz-input required placeholder="名称" [(ngModel)]="hero.name" name="name" [disabled]="!isCreate" />
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired nzSpan="2">英雄类型</nz-form-label>
+    <nz-form-label nzRequired nzSpan="2">类型</nz-form-label>
     <nz-form-control>
       <nz-radio-group [(ngModel)]="hero.type" name="type">
         <label nz-radio nzValue="力量">力量</label>
@@ -33,9 +33,6 @@
       <input nz-input required placeholder="英雄图标" [(ngModel)]="hero.icon" name="icon" />
     </nz-form-control>
   </nz-form-item>
-  <nz-form-control nzOffset="2">
-    <nz-alert *ngIf="error" nzType="error" [nzMessage]="error"></nz-alert>
-  </nz-form-control>
   <nz-form-item>
     <nz-form-control nzOffset="2">
       <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit"
