--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -16,6 +16,9 @@
       <li nz-menu-item nzMatchRouter>
         <a routerLink="/dota/heroes">英雄列表</a>
       </li>
+      <li nz-menu-item nzMatchRouter>
+        <a routerLink="/dota/items">物品列表</a>
+      </li>
     </ul>
   </li>
 </ul>
