--- a/src/app/pages/dota/heroes/heroes.component.html
+++ b/src/app/pages/dota/heroes/heroes.component.html
@@ -26,6 +26,6 @@
     </nz-spin>
   </nz-collapse-panel>
 </nz-collapse>
-<a class="btn-add" nz-button nzType="primary" nzSize="large" routerLink="/dota/hero/create"><i nz-icon nzType="plus"></i>新增</a>
+<a nz-button nzType="primary" nzSize="large" routerLink="/dota/hero/create"><i nz-icon nzType="plus"></i>新增</a>
 
 
