--- a/src/app/pages/dota/itemes/items.component.html
+++ b/src/app/pages/dota/itemes/items.component.html
@@ -2,7 +2,7 @@
 <nz-collapse>
   <nz-collapse-panel nzHeader="消耗品" nzActive="true">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of consumables" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of consumables" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -11,7 +11,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="属性">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of attributes" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of attributes" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -20,7 +20,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="军备">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of arms" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of arms" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -29,7 +29,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="奥术">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of arcane" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of arcane" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -41,7 +41,7 @@
 <nz-collapse>
   <nz-collapse-panel nzHeader="常用" nzActive="true">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of commons" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of commons" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -50,7 +50,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="辅助">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of assists" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of assists" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -59,7 +59,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="法器">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of multipliers" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of multipliers" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -68,7 +68,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="防具">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of armors" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of armors" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -77,7 +77,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="武器">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of weapons" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of weapons" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -86,7 +86,7 @@
   </nz-collapse-panel>
   <nz-collapse-panel nzHeader="圣物">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of halidoms" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of halidoms" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -94,11 +94,11 @@
     </nz-spin>
   </nz-collapse-panel>
 </nz-collapse>
-<h2>升级物品</h2>
+<h2>神秘商店</h2>
 <nz-collapse>
   <nz-collapse-panel nzHeader="神秘商店" nzActive="true">
     <nz-spin class="hero-grid" [nzSpinning]="loading">
-      <a *ngFor="let item of secrets" routerLink="/dota/hero" [queryParams]=""
+      <a *ngFor="let item of secrets" routerLink="/dota/item" [queryParams]="item"
          class="hero-link">
         <img [src]="item.img" class="hero-img" alt="{{item.name}}" />
         <span class="hero-name">{{item.name}}</span>
@@ -106,6 +106,6 @@
     </nz-spin>
   </nz-collapse-panel>
 </nz-collapse>
-<a nz-button nzType="primary" nzSize="large" routerLink="/dota/hero/create"><i nz-icon nzType="plus"></i>新增</a>
+<a nz-button nzType="primary" nzSize="large" routerLink="/dota/item/create"><i nz-icon nzType="plus"></i>新增</a>
 
 
