--- a/src/app/pages/dota/item-detail/attr-info/attr-info.component.html
+++ b/src/app/pages/dota/item-detail/attr-info/attr-info.component.html
@@ -1,4 +1,4 @@
-<form nz-form #form="ngForm">
+<form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item *ngFor="let attr of attrs;let i=index">
     <nz-form-label nzRequired nzSpan="4">{{attr.key}}</nz-form-label>
     <nz-form-control nzSpan="4">
@@ -11,15 +11,15 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control nzOffset="4">
-      <button nz-button nzType="dashed" nzSize="large" (click)="inputModalVisible = true;inputKey=null">
+      <button nz-button nzType="dashed" nzSize="large" (click)="inputModalVisible = true;inputKey=null" type="button">
         <i nz-icon nzType="plus"></i>添加
       </button>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-control nzOffset="4">
-      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit"
-              [nzLoading]="loading"><i nz-icon nzType="upload"></i>保存
+      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit">
+        <i nz-icon nzType="upload"></i>保存
       </button>
     </nz-form-control>
   </nz-form-item>
