--- a/src/app/pages/dota/item-detail/effect-info/effect-info.component.html
+++ b/src/app/pages/dota/item-detail/effect-info/effect-info.component.html
@@ -1,4 +1,4 @@
-<form nz-form #form="ngForm">
+<form nz-form #form="ngForm" (ngSubmit)="submitForm()">
   <nz-form-item *ngFor="let effect of effects;let i=index">
     <nz-form-label nzRequired nzSpan="2">{{effect.key}}</nz-form-label>
     <nz-form-control nzSpan="6">
@@ -12,20 +12,21 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-control nzOffset="2">
-      <button nz-button nzType="dashed" nzSize="large" (click)="inputModalVisible = true;inputKey=null">
+      <button nz-button nzType="dashed" nzSize="large" (click)="inputModalVisible = true;inputKey=null" type="button">
         <i nz-icon nzType="plus"></i>添加
       </button>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
     <nz-form-control nzOffset="2">
-      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit"
-              [nzLoading]="loading"><i nz-icon nzType="upload"></i>保存
+      <button nz-button nzType="primary" nzSize="large" [disabled]="!form.form.valid" type="submit">
+        <i nz-icon nzType="upload"></i>保存
       </button>
     </nz-form-control>
   </nz-form-item>
 </form>
 <nz-modal [(nzVisible)]="inputModalVisible" nzTitle="请输入效果名称" [nzOkDisabled]="!inputKey"
-          (nzOnOk)="effects.push({key:inputKey,value:''});inputModalVisible=false" (nzOnCancel)="inputModalVisible=false">
+          (nzOnOk)="effects.push({key:inputKey,value:''});inputModalVisible=false"
+          (nzOnCancel)="inputModalVisible=false">
   <input nz-input required placeholder="效果名称" [(ngModel)]="inputKey" name="key" />
 </nz-modal>
