--- a/src/app/pages/dashboard/access-geo/access-geo.component.html
+++ b/src/app/pages/dashboard/access-geo/access-geo.component.html
@@ -1,5 +1,6 @@
 <nz-card nzTitle="访问来源">
   <div class="chart-container">
-    <div id="c4"></div>
+    <div id="c4">
+    </div>
   </div>
 </nz-card>
